支払い先名のセルを入力画面に作成

--- a/repaymentSimulator/Base.lproj/Main.storyboard
+++ b/repaymentSimulator/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
             <objects>
                 <viewController id="OMy-nJ-CI7" customClass="ViewController" customModule="repaymentSimulator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4cK-Cl-9mx" customClass="UITableView">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="6mX-dm-3FY">
@@ -73,12 +73,15 @@
             <objects>
                 <viewController id="aHx-9P-h7Z" customClass="AddController" customModule="repaymentSimulator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="IiP-uU-n8A">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="eKY-tz-05I"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="TjV-sY-MWZ"/>
+                    <connections>
+                        <segue destination="OMy-nJ-CI7" kind="push" identifier="submit" id="4Y1-DQ-8L3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qkg-1w-5cY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -180,6 +183,9 @@
             <point key="canvasLocation" x="-144.27480916030532" y="1329.5774647887324"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="4Y1-DQ-8L3"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="chart.bar.fill" catalog="system" width="128" height="90"/>
         <image name="homekit" catalog="system" width="128" height="104"/>
