--- a/repaymentSimulator/Base.lproj/Main.storyboard
+++ b/repaymentSimulator/Base.lproj/Main.storyboard
@@ -65,6 +65,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="6mX-dm-3FY" id="zW5-QE-C0j"/>
+                        <segue destination="Mfu-1C-dSY" kind="presentation" identifier="" id="OAP-Ab-Ert"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CNV-Gt-eFM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -88,7 +89,42 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qkg-1w-5cY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1443.5114503816794" y="1328.8732394366198"/>
+            <point key="canvasLocation" x="1558" y="1330"/>
+        </scene>
+        <!--Setting Detail View Controller-->
+        <scene sceneID="9PI-Ud-bNF">
+            <objects>
+                <viewController storyboardIdentifier="SettingDetailViewController" id="Mfu-1C-dSY" customClass="SettingDetailViewController" customModule="repaymentSimulator" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1to-tf-D4W">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="test" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y1e-Lx-0G0">
+                                <rect key="frame" x="69" y="331" width="224" height="112"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="test" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QDZ-zn-Wcy">
+                                <rect key="frame" x="69" y="451" width="224" height="112"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="bXQ-QB-6wX"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <connections>
+                        <outlet property="nameLabel" destination="y1e-Lx-0G0" id="YAi-j3-00J"/>
+                        <outlet property="totalLabel" destination="QDZ-zn-Wcy" id="2UW-WP-4hs"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mku-ea-EDu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="782" y="2099"/>
         </scene>
         <!--HOME-->
         <scene sceneID="xbL-PL-IBO">
